kubernetes-project/admin/traefik-dashboard/ingress-traefik-dashboard.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/tls-acme: "false"
spec:
  rules:
  -
    host: traefik-dashboard.158.160.5.137.nip.io
    http:
      paths: 
      -
        path: /
        pathType: Prefix
        backend:
          service:
            name: traefik
            port:
              number: 9000
